--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
             <div class="logo"><a href="/index.html"></a></div>
             <ul class="links">
                 <li><a href="/index.html">Acasa</a></li>
+                <li><a href="/src/pages/cursAcreditat/index.html">Curs Acreditat</a></li>
+                <li><a href="/src/pages/specializari/index.html">Specializari masaj</a></li>
+                <li><a href="/src/pages/tabereMasaj/index.html">Tabere Masaj</a></li>
+                <li><a href="/src/pages/competitii/index.html">Competitii</a></li>
                 <li><a href="/src/pages/Cariere/index.html">Cariere</a></li>
-                <li><a href="/src/pages/cursCalificare/index.html">Curs Calificare</a></li>
-                <li><a href="/src/pages/Specializari/index.html">Specializari</a></li>
-                <li><a href="/src/pages/Tabere/index.html">Tabere</a></li>
                 <li><a href="/src/pages/Galerie/index.html">Galerie</a></li>
+                <li><a href="./src/pages/Blog/index.html">Blog</a></li>
             </ul>
             <a href="/src/pages/Contact/index.html" class="action_btn">Contacteaza-ne </a>
                 <div class="toggle_btn">
@@ -30,22 +32,35 @@
         <div class="dropdown_menu">
             <ul>
                 <li><a href="/index.html">Acasa</a></li>
+                <li><a href="/src/pages/cursAcreditat/index.html">Curs Acreditat</a></li>
+                <li><a href="/src/pages/specializari/index.html">Specializari masaj</a></li>
+                <li><a href="/src/pages/tabereMasaj/index.html">Tabere Masaj</a></li>
+                <li><a href="/src/pages/competitii/index.html">Competitii</a></li>
                 <li><a href="/src/pages/Cariere/index.html">Cariere</a></li>
-                <li><a href="/src/pages/cursCalificare/index.html">Curs Calificare</a></li>
-                <li><a href="/src/pages/Specializari/index.html">Specializari</a></li>
-                <li><a href="/src/pages/Tabere/index.html">Tabere</a></li>
                 <li><a href="/src/pages/Galerie/index.html">Galerie</a></li>
+                <li><a href="./src/pages/Blog/index.html">Blog</a></li>
                 <li><a href="/src/pages/Contact/index.html" class="action_btn"> Contacteaza-ne </a></li>
               </ul>
         </div>
     </header>
-    <section id="hero">
-        <div class="imageContainer"><img src="/src/assets/images/Certificat.jpg" alt=""></div>
-         <div class="textContainer">
-            <h1>Cursuri de calificare maseur</h1>
+    <div id="hero">
+        <div class="portrait"></div>
+        <div class="text">
+            <h1>Bine ați venit!</h1>
+            <p>Metoda Formas este rezultatul a peste 20 de ani de practică și peste 10 ani de predare a diferitelor specialități de masaj. Formas Center este o școală tradițională de masaj, pe linia de formare asiatică a viitorilor profesioniști. De aceea, mentalitatea și conținutul programului pedagogic sunt mai vaste decât lista generală de mai jos:</p>
+            <ul>
+                <li>Masaj Deep tissue</li>
+                <li>Masaj cu pietre vulcanice</li>
+                <li>Masaj cu bete de bambus</li>
+                <li>Masaj cu miere</li>
+                <li>Masaj monahal</li>
+                <li>Masaj office</li>
+            </ul>
+        </div> 
         </div>
-    </section>
-    <section id="cursCalificare"></section>
+    <div id="cursCalificare">
+
+    </div>
     
 
     <footer class="footer">
@@ -61,12 +76,13 @@
           <div class="sigle">
             <a href="http://www.edu.ro"><img src="/src/assets/images/download.jpg" alt="photo"></a>
             <a href="https://european-union.europa.eu/index_ro"><img src="/src/assets/images/Flag_of_Europe.svg.png" alt="UE"></a>
+            <a href="https://mmuncii.ro/j33/index.php/ro/"><img src="/src/assets/images/MMJS-logo.jpg" alt="photo"></a>
           </div>
           <p> &copy;FORMAS 2023 | Produced by Deiso </p>
 
           <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
           <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </footer>
-    <script src="/index.js" type="text/javascript"> </script>
+    <script src="index.js" type="text/javascript"> </script>
 </body>
 </html>
