--- a/src/pages/Cariere/index.html
+++ b/src/pages/Cariere/index.html
@@ -15,26 +15,32 @@
             <div class="logo"><a href="/index.html"></a></div>
             <ul class="links">
                 <li><a href="/index.html">Acasa</a></li>
+                <li><a href="/src/pages/cursAcreditat/index.html">Curs Acreditat</a></li>
+                <li><a href="/src/pages/specializari/index.html">Specializari masaj</a></li>
+                <li><a href="/src/pages/tabereMasaj/index.html">Tabere Masaj</a></li>
+                <li><a href="/src/pages/competitii/index.html">Competitii</a></li>
                 <li><a href="/src/pages/Cariere/index.html">Cariere</a></li>
-                <li><a href="/src/pages/cursCalificare/index.html">Curs Calificare</a></li>
-                <li><a href="/src/pages/Specializari/index.html">Specializari</a></li>
-                <li><a href="/src/pages/Tabere/index.html">Tabere</a></li>
                 <li><a href="/src/pages/Galerie/index.html">Galerie</a></li>
+                <li><a href="./src/pages/Blog/index.html">Blog</a></li>
             </ul>
-            <a href="#" class="action_btn">Contacteaza-ne </a>
+            <a href="/src/pages/Contact/index.html" class="action_btn">Contacteaza-ne </a>
                 <div class="toggle_btn">
                     <i class="fa-solid fa-bars" style="color: #fbfbfb;"></i>
                 </div>
             
         </div>
         <div class="dropdown_menu">
+            <ul>
                 <li><a href="/index.html">Acasa</a></li>
+                <li><a href="/src/pages/cursAcreditat/index.html">Curs Acreditat</a></li>
+                <li><a href="/src/pages/specializari/index.html">Specializari masaj</a></li>
+                <li><a href="/src/pages/tabereMasaj/index.html">Tabere Masaj</a></li>
+                <li><a href="/src/pages/competitii/index.html">Competitii</a></li>
                 <li><a href="/src/pages/Cariere/index.html">Cariere</a></li>
-                <li><a href="/src/pages/cursCalificare/index.html">Curs Calificare</a></li>
-                <li><a href="/src/pages/Specializari/index.html">Specializari</a></li>
-                <li><a href="/src/pages/Tabere/index.html">Tabere</a></li>
                 <li><a href="/src/pages/Galerie/index.html">Galerie</a></li>
-                <li><a href="#" class="action_btn">Contacteaza-ne </a></li>
+                <li><a href="./src/pages/Blog/index.html">Blog</a></li>
+                <li><a href="/src/pages/Contact/index.html" class="action_btn"> Contacteaza-ne </a></li>
+              </ul>
         </div>
     </header>
     
