--- a/src/pages/competitii/index.html
+++ b/src/pages/competitii/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/src/pages/Tabere/index.css">
+    <link rel="stylesheet" href="/src/pages/competitii/index.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Document</title>
 </head>
@@ -15,31 +15,38 @@
             <div class="logo"><a href="/index.html"></a></div>
             <ul class="links">
                 <li><a href="/index.html">Acasa</a></li>
+                <li><a href="/src/pages/cursAcreditat/index.html">Curs Acreditat</a></li>
+                <li><a href="/src/pages/specializari/index.html">Specializari masaj</a></li>
+                <li><a href="/src/pages/tabereMasaj/index.html">Tabere Masaj</a></li>
+                <li><a href="/src/pages/competitii/index.html">Competitii</a></li>
                 <li><a href="/src/pages/Cariere/index.html">Cariere</a></li>
-                <li><a href="/src/pages/cursCalificare/index.html">Curs Calificare</a></li>
-                <li><a href="/src/pages/Specializari/index.html">Specializari</a></li>
-                <li><a href="/src/pages/Tabere/index.html">Tabere</a></li>
                 <li><a href="/src/pages/Galerie/index.html">Galerie</a></li>
+                <li><a href="/src/pages/Blog/index.html">Blog</a></li>
             </ul>
-            <a href="#" class="action_btn">Contacteaza-ne </a>
+            <a href="/src/pages/Contact/index.html" class="action_btn">Contacteaza-ne </a>
                 <div class="toggle_btn">
                     <i class="fa-solid fa-bars" style="color: #fbfbfb;"></i>
                 </div>
             
         </div>
         <div class="dropdown_menu">
+            <ul>
                 <li><a href="/index.html">Acasa</a></li>
+                <li><a href="/src/pages/cursAcreditat/index.html">Curs Acreditat</a></li>
+                <li><a href="/src/pages/specializari/index.html">Specializari masaj</a></li>
+                <li><a href="/src/pages/tabereMasaj/index.html">Tabere Masaj</a></li>
+                <li><a href="/src/pages/competitii/index.html">Competitii</a></li>
                 <li><a href="/src/pages/Cariere/index.html">Cariere</a></li>
-                <li><a href="/src/pages/cursCalificare/index.html">Curs Calificare</a></li>
-                <li><a href="/src/pages/Specializari/index.html">Specializari</a></li>
-                <li><a href="/src/pages/Tabere/index.html">Tabere</a></li>
                 <li><a href="/src/pages/Galerie/index.html">Galerie</a></li>
-                <li><a href="#" class="action_btn">Contacteaza-ne </a></li>
+                <li><a href="/src/pages/Blog/index.html">Blog</a></li>
+                <li><a href="/src/pages/Contact/index.html" class="action_btn"> Contacteaza-ne </a></li>
+              </ul>
         </div>
     </header>
-    <div class="test">
-        <h1>Hello</h1>
-        <img src="/src/assets/images/Certificat.jpg" alt="">
+    <div class="container">
+        <img src="/src/assets/images/competitii.png" alt="">
+        <p><span> Sectiunea de pregatire fizica, tehnica si coregrafica pentru campionatele international de masaj ofera profesionistilor care doresc o experienta consistenta de evolutie cu efecte multiple, atat pe plan antreprenorial cat si personal.</span>
+        <span> Evaluarea candidatilor este esentiala pentru obiectivele de antrenament specific competitional ASC, iar consecventa de pregatire de durata, garanteaza o evolutie de calitate la nivel international.</span></p>
     </div>
 
     <footer class="footer">
@@ -52,6 +59,11 @@
                 <ion-icon name="logo-instagram"></ion-icon>
               </a></li>
           </ul>
+          <div class="sigle">
+            <a href="http://www.edu.ro"><img src="/src/assets/images/download.jpg" alt="photo"></a>
+            <a href="https://european-union.europa.eu/index_ro"><img src="/src/assets/images/Flag_of_Europe.svg.png" alt="UE"></a>
+            <a href="https://mmuncii.ro/j33/index.php/ro/"><img src="/src/assets/images/MMJS-logo.jpg" alt="photo"></a>  
+        </div>
           <p> &copy;FORMAS 2023 | Produced by Deiso </p>
 
           <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
